--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -28,11 +19,25 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hide{
+  display: none;
+}
+.show{
+  display: block;
+}
+.letter{
+  font-size: 2em;
+  padding: 0.5em;
+  margin: 0.8em;
+  border: #282c34 1px solid;
+  background-color: #e3e3e3 ;
+}
+.error{
+  border: 1px solid #858585;
+  background-color:#851B15;
+  animation: 
+    pulse
+    1s
+    ease;
+  
 }
